--- a/my_app/templates/index.html
+++ b/my_app/templates/index.html
@@ -37,7 +37,7 @@
             <section class="text-box">
                 <h1>Hello There!</h1>
                 <p>I'm Nadjib,<br>Front end Developer. </p>
-                <a href="{{ url for('about') }}" class="btn">Visit Me To Know More</a>
+                <a href="{{ url_for('about') }}" class="btn">Visit Me To Know More</a>
             </section>
         </div>
     </header>
