--- a/my_app/templates/projects.html
+++ b/my_app/templates/projects.html
@@ -92,7 +92,7 @@
             <div class="content">
                 <h1>You have a new project</h1>
                 <p>Contact me now and get a 30% discount on your new project</p>
-                <a href="{{ur for('contact') }}" class="btn">CONTACT US</a>
+                <a href="{{url_for('contact') }}" class="btn">CONTACT US</a>
             </div>
         </div>
     </section>
