--- a/my_app/templates/contact.html
+++ b/my_app/templates/contact.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>nadjibm.com</title>
-    <!--===== render all elements normally =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalise.css') }}"/>
-    <!--===== font awesome library =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}"/>
-    <!--===== main template css file =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
-    <!--===== google font =====-->
-    <link rel="preconnect" href="https://fonts.googleapis.com"/>
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
-    <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"/>
-</head>
-<body>
-    <!--===== start header =====-->
-    <header>
+    <title>NadjibM.com</title>
+     <!--===== render all elements normally =====-->
+     <link rel="stylesheet" href="../static/css/normalise.css"/>
+     <!--===== font awesome library =====-->
+     <link rel="stylesheet" href="../static/css/all.min.css"/>
+     <!--===== main template css file =====-->
+     <link rel="stylesheet" href="../static/css/main.css"/>
+     <!--===== google font =====-->
+     <link rel="preconnect" href="https://fonts.googleapis.com"/>
+     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
+     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"/>
+ </head>
+ <body>
+     <!--===== start header =====-->
+     <header class="sub-header">
         <div class="container">
             <nav>
-                <a href="{{ url_for('index') }}"><p>Nadjib <span>M</span></p></a>
+                <a href="index.html"><p>Nadjib <span>M</span></p></a>
                 <div class="links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="{{ url_for('index') }}">HOME</a></li>
-                        <li><a href="{{ url_for('about') }}">ABOUT</a></li>
-                        <li><a href="{{ url_for('skills') }}">SKILLS</a></li>
-                        <li><a href="{{ url_for('projects') }}">PROJECTS</a></li>
-                        <li><a href="{{ url_for('contact') }}">CONTACT</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="skills.html">SKILLS</a></li>
+                        <li><a href="projects.html">PROJECTS</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -61,7 +61,7 @@
                 </div>
                 <div>
                     <i class="fas fa-phone-alt"></i>
-                    <h4>+213 799560745</h4>
+                    <h4>+213 549663640</h4>
                     <p>Sunday to Thursday 8 Am to 6 Pm</p>
                 </div>
                 <div>
@@ -90,10 +90,9 @@
         <div class="container">
             <h4>About Me</h4>
             <p>Hight level experience in web design and development knowledge, producing quality Work.</p>
-            <a href="https://www.facebook.com/NadjibM/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/nadjib_m1"></a><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/nadjibm_/"></a><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/"></a><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://twitter.com/nadjib_m1" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/nadjibm_/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <p>made with <i class="far fa-heart"></i> by Nadjib M</p>
         </div>
     </footer>
@@ -103,6 +102,6 @@
 
 
     <!-- main js -->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 </html>>
