--- a/my_app/static/css/main.css
+++ b/my_app/static/css/main.css
@@ -39,19 +39,19 @@ ul {
 /*====small====*/
 @media (min-width:768px) {
     .container {
-        width: 750px;
+        width: 720px;
     }
 }
 /*====meduim====*/
 @media (min-width:992px) {
     .container {
-        width: 970px;
+        width: 920px;
     }
 }
 /*===larg===*/
 @media (min-width:1200px) {
     .container {
-        width: 1170px;
+        width: 1150px;
     }
 }
 /*===========end global rules====================*/
@@ -625,13 +625,23 @@ input:focus, textarea:focus {
     transition: 0.6s;
     position: relative;
     margin-bottom: 30px;
-    width: 40%;
+    width: 200px;
     border-radius: 0 5px 25px 0;
 }
-@media (max-width:767px) {
+@media (max-width:760px) {
     .leave_a_comment-content .content form .btn {
         padding: 9px 25px;
-        margin-left:20%
+        margin-left:20%;
+        width:50%;
+        font-size: 18px;
+    }
+}
+@media (max-width:420px) {
+    .leave_a_comment-content .content form .btn {
+        padding: 9px 25px;
+        margin-left:20%;
+        width:60%;
+        font-size: 15px;
     }
 }
 .leave_a_comment-content .content form .btn:hover {
@@ -670,6 +680,7 @@ input:focus, textarea:focus {
     }
     .con-tact .content {
         margin: auto;
+        width: 75%;
     }
 }
 .con-tact .content div {
@@ -739,9 +750,19 @@ input:focus, textarea:focus {
     width: 40%;
     border-radius: 0 5px 25px 0;
 }
+@media (max-width:1000px) {
+    .form .btn {
+    width: 50%;
+    }
+}
 @media (max-width:767px) {
     .form .btn {
-        margin-left: 20%;
+    width: 40%;
+    }
+}
+@media (max-width:420px) {
+    .form .btn {
+        width: 60%;
     }
 }
 .form .btn:hover {
