--- a/my_app/templates/about.html
+++ b/my_app/templates/about.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>nadjibm.com</title>
+    <title>NadjibM.com</title>
     <!--===== render all elements normally =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalise.css') }}"/>
+    <link rel="stylesheet" href="../static/css/normalise.css"/>
     <!--===== font awesome library =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}"/>
+    <link rel="stylesheet" href="../static/css/all.min.css"/>
     <!--===== main template css file =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
+    <link rel="stylesheet" href="../static/css/main.css"/>
     <!--===== google font =====-->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
@@ -18,18 +18,18 @@
 </head>
 <body>
     <!--===== start header =====-->
-    <header>
+    <header class="sub-header">
         <div class="container">
             <nav>
-                <a href="{{ url_for('index') }}"><p>Nadjib <span>M</span></p></a>
+                <a href="index.html"><p>Nadjib <span>M</span></p></a>
                 <div class="links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="{{ url_for('index') }}">HOME</a></li>
-                        <li><a href="{{ url_for('about') }}">ABOUT</a></li>
-                        <li><a href="{{ url_for('skills') }}">SKILLS</a></li>
-                        <li><a href="{{ url_for('projects') }}">PROJECTS</a></li>
-                        <li><a href="{{ url_for('contact') }}">CONTACT</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="skills.html">SKILLS</a></li>
+                        <li><a href="projects.html">PROJECTS</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -43,14 +43,14 @@
     <!--start about us content-->
     <section class="about-us-content">
         <div class="container">
-            <img src="images/me.jpg">
+            <img src="../static/images/me.jpg">
             <div class="content">
                 <h1>About.</h1>
-                <p></p>My name is Nadjib Mouhoun and I am currently studying Automatique<br><br> This academic year, 2021-2022, I completed my third-year Licence.<br><br>Outside of education, I take a keen interest in technology and programming.</p>
+                <p>My name is Nadjib Mouhoun and i have a bachelor degree in Automation engineering<br><br>In Addition to that, I Am a Frontend developer and i'am interested in technology and programming.<br><br>Extremely motivated to constantly develop my skills and grow professionally</p>
                 <a  class="cv" href="../static/cv/Mouhoun_Nadjib_CV.pdf" download><P>Download CV</P></a>
                 <br>
                 <br>
-                <a href="{{ url_for('contact') }}" class="btn">EXPLORER NOW</a>
+                <a href="contact.html" class="btn">EXPLORER NOW</a>
             </div>
         </div>
     </section>
@@ -62,10 +62,9 @@
         <div class="container">
             <h4>About Me</h4>
             <p>Hight level experience in web design and development knowledge, producing quality Work.</p>
-            <a href="https://www.facebook.com/NadjibM/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/nadjib_m1"></a><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/nadjibm_/"></a><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/"></a><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://twitter.com/nadjib_m1" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/nadjibm_/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <p>made with <i class="far fa-heart"></i> by Nadjib M</p>
         </div>
     </footer>
@@ -75,6 +74,6 @@
 
 
     <!-- main js -->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 </html>
