--- a/my_app/templates/projects.html
+++ b/my_app/templates/projects.html
@@ -4,33 +4,32 @@
     <meta charset="UTF-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>nadjibm.com</title>
+    <title>NadjibM.com</title>
     <!--===== render all elements normally =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/normalise.css') }}"/>
+    <link rel="stylesheet" href="../static/css/normalise.css"/>
     <!--===== font awesome library =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/all.min.css') }}"/>
+    <link rel="stylesheet" href="../static/css/all.min.css"/>
     <!--===== main template css file =====-->
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}"/>
+    <link rel="stylesheet" href="../static/css/main.css"/>
     <!--===== google font =====-->
     <link rel="preconnect" href="https://fonts.googleapis.com"/>
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
     <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200;300;400;500;600;700;800&display=swap" rel="stylesheet"/>
 </head>
-
 <body>
     <!-- start header -->
     <header class="sub-header">
         <div class="container">
             <nav>
-                <a href="{{ url_for('index') }}"><p>Nadjib <span>M</span></p></a>
+                <a href="index.html"><p>Nadjib <span>M</span></p></a>
                 <div class="links" id="navLinks">
                     <i class="fas fa-times" onclick="hideMenu()"></i>
                     <ul>
-                        <li><a href="{{ url_for('index') }}">HOME</a></li>
-                        <li><a href="{{ url_for('about') }}">ABOUT</a></li>
-                        <li><a href="{{ url_for('skills') }}">SKILLS</a></li>
-                        <li><a href="{{ url_for('projects') }}">PROJECTS</a></li>
-                        <li><a href="{{ url_for('contact') }}">CONTACT</a></li>
+                        <li><a href="index.html">HOME</a></li>
+                        <li><a href="about.html">ABOUT</a></li>
+                        <li><a href="skills.html">SKILLS</a></li>
+                        <li><a href="projects.html">PROJECTS</a></li>
+                        <li><a href="contact.html">CONTACT</a></li>
                     </ul>
                 </div>
                 <i class="fas fa-bars" onclick="showMenu()"></i>
@@ -62,7 +61,7 @@
                     <a href="https://nadjib-coder.github.io/front-end-mentor-challenge-12/">
                     <div class="img">
                         
-                            <img src="../static/images/project 2.png" alt="newyork"/>
+                            <img src="../static/images/project2.png" alt="newyork"/>
                         
                     </div>
                     <div class="layer">
@@ -92,7 +91,7 @@
             <div class="content">
                 <h1>You have a new project</h1>
                 <p>Contact me now and get a 30% discount on your new project</p>
-                <a href="{{url_for('contact') }}" class="btn">CONTACT US</a>
+                <a href="contact.html" class="btn">CONTACT US</a>
             </div>
         </div>
     </section>
@@ -111,7 +110,7 @@
                     <input class="btn" type="submit" name="submit" value="POST COMMENT">
                 </form>
             </section>
-        </div>  
+        </div>
     </section>
     <!--end blog content-->
 
@@ -122,10 +121,9 @@
         <div class="container">
             <h4>About Me</h4>
             <p>Hight level experience in web design and development knowledge, producing quality Work.</p>
-            <a href="https://www.facebook.com/NadjibM/"><i class="fab fa-facebook-f"></i></a>
-            <a href="https://twitter.com/nadjib_m1"></a><i class="fab fa-twitter"></i></a>
-            <a href="https://www.instagram.com/nadjibm_/"></a><i class="fab fa-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/"></a><i class="fab fa-linkedin-in"></i></a>
+            <a href="https://twitter.com/nadjib_m1" target="_blank"><i class="fab fa-twitter"></i></a>
+            <a href="https://www.instagram.com/nadjibm_/" target="_blank"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/nadjib-mouhoun-1725a7212/" target="_blank"><i class="fab fa-linkedin-in"></i></a>
             <p>made with <i class="far fa-heart"></i> by Nadjib M</p>
         </div>
     </footer>
@@ -133,6 +131,6 @@
 
 
     <!-- main js -->
-    <script src="{{ url_for('static', filename='js/main.js') }}"></script>
+    <script src="../static/js/main.js"></script>
 </body>
 </html>
